wayward/tests/compile_fail/strict_bind_without_strict.stderr
error[E0277]: the trait bound `Strict<Endpoint<Get, HCons<Lit<__lit_tags>, HNil>, NoBody, std::string::String>>: BindableEndpoint` is not satisfied
  --> tests/compile_fail/strict_bind_without_strict.rs:16:33
   |
16 |     let _ = Server::<API>::new((bind!(get_tags),));
   |                                 ^^^^^^^^^^^^^^^ the trait `BindableEndpoint` is not implemented for `Strict<Endpoint<Get, HCons<Lit<__lit_tags>, HNil>, NoBody, std::string::String>>`
   |
   = help: the following other types implement trait `BindableEndpoint`:
             ContentType<C, E>
             Endpoint<M, P, Req, Res, Q>
             RateLimited<R, E>
             Validated<V, E>
             Versioned<V, E>
note: required by a bound in `wayward::bind`
  --> $WORKSPACE/wayward-server/src/handler_for.rs
   |
   | pub fn bind<E, H, Args>(handler: H) -> BoundHandler<E>
   |        ---- required by a bound in this function
   | where
   |     E: BindableEndpoint,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `bind`
   = note: this error originates in the macro `bind` (in Nightly builds, run with -Z macro-backtrace for more info)
